<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- Account basic management -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/configure_sip_account"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/field_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sample_field_user"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/field_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sample_field_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/save_acc_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_account" />

        <!-- Sip service basic management -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:text="@string/manage_sip_service"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/start_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_sip_service" />
    </LinearLayout>

</ScrollView>